# trufflesqueak

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .smalltalk.ston  .squot  .travis.yml  AGENTS.md  CITATION.bib  Info.plist  LICENSE  README.md  gu-catalog.properties  testDecompressAndCompress.st  trufflesqueak.sh
.github/: dependabot.yml
docs/: README.md  TestImage.md  development.md  images.md  polyglot-api.md  test-image.md
lib/: Makefile  SqueakFFIPrims.c  SqueakFFIPrims.dylib.bak  ffi-test-all.c
measurements/: afterAllOpt.txt  afterGCopt.txt  beforeGCopt.txt  loop.sh
mx.graalsqueak/: ce-graalsqueak  graalsqueak-svm  mx_graalsqueak.py  native-image.properties  suite.py  utils.sh
mx.trufflesqueak/: analyze_benchmarks.py  graal-vm-23.1.0.patch  graalvm-24.0.0.patch  graalvm-24.0.2.patch  graalvm-24.2.0.patch  graalvm-24.2.1.patch  graalvm-25.0.0.patch  graalvm-25.0.1.patch  graalvm-25.0.2.patch  graalvm-25.1.0.patch  jvm  liblauncher_macos_backport.patch  mvn-settings.xml.template  mx_trufflesqueak.py  native  native-image.properties  suite.py  trufflesqueak-jar  trufflesqueak-jvm  trufflesqueak-native  trufflesqueak-standalone  trufflesqueak-svm  utils.sh
scripts/: build-ffi-test.sh  download-file.sh  download-test-image.sh  helpers.sh  make_component.bat  make_component.sh  run-tests.sh  (+2 more)
src/de.hpi.swa.trufflesqueak.ffi.native/: CMakeLists.txt
src/de.hpi.swa.trufflesqueak.ffi.native/include/: sqMemoryAccess.h  sqPlatformSpecific.h  sqVirtualMachine.h  vmCallback.h
src/de.hpi.swa.trufflesqueak.ffi.native/src/: InterpreterProxy.c  SqueakFFIPrims.c
(+4615 files in other folders)
